--- a/web.css
+++ b/web.css
@@ -106,6 +106,8 @@ button:hover{
     width: 150px;
     height: 50px;
     background-color:  rgb(190, 140, 73);
+    box-shadow: 1px 2px 5px gray,1px 2px 5px gray,1px 2px 5px 
+  gray,1px 2px 5px gray,1px 2px 5px gray;
 }
 footer{
     background-color:  rgb(190, 140, 73);
@@ -116,4 +118,5 @@ footer{
    opacity: calc(40%); 
     color: white;
     height: 100px;
+
 }
